# fall_detection

./: CMakeLists.txt  package.xml
cmake/modules/: FindJsonCpp.cmake
src/: detection.cpp  test.cpp
